# pipecat-examples

./: pyproject.toml
whatsapp/: Project-Goal and outcome.txt  bot.py  index.html  main.py  pyproject.toml  requirements.txt  response.py  server_patch.txt  system_prompt_bank.txt  system_prompt_hotel.txt  voice_agent_registry.py
whatsapp/agents/bank/: agent_tools.py  config.py  graph.py
whatsapp/agents/hotel/: agent_tools.py  config.py  graph.py  graph_updated_logger.py
whatsapp/core/: agent_config.py  agent_registry.py
whatsapp/db/: database.py  init_db.py  models.py
whatsapp/db_bank/: database.py  init_db.py
whatsapp/db_bank/users/: model.py  schema.py  seed_data.py
whatsapp/documents/: ABB_Bank.txt  Sayeman_hotel.txt  questions_add_bank.txt  questions_sayeman_hotel.txt
whatsapp/files/: agent_config.py  bank_agent_tools.py  bank_config.py  bank_graph.py  convert_to_txt.py  helpers.py  hotel_agent_tools.py  hotel_config.py  hotel_graph.py  rag_service.py  rag_service_hotel.py  response.py  schemas.py  server.py  vector_store_helpers.py
whatsapp/server/: server.py
whatsapp/services/rag_services/: rag_service.py  rag_service_hotel.py
whatsapp/utils/: agent_logger.py  agent_logger_updated.py  helpers.py  llm_provider.py  vector_store_helpers.py
whatsapp/vector_store/ABB_Bank/: chroma.sqlite3  hash.txt
whatsapp/vector_store/Sayeman_hotel/: chroma.sqlite3  hash.txt
whatsapp/voice_agent/bank/: config.py  intent_rag.py  intent_rag_1.py
whatsapp/voice_agent/hotel/: agent_tools.py  config.py  intent_rag.py  (+1 more)
whatsapp/whatsapp_message/: schemas.py
(+4 files in other folders)
